# scripts

./: .gitignore  Gemfile  README.md  bvg.sh  epub.css  flake.nix  gemset.nix  hermes.py  keinverlag  kevin.py  kevin.sh  package.yaml  pie.cabal  rilke.py  shell.nix
biblioteca/: book.sh  book.txt
bvg/: bvg.rb  bvg.sh
bvg/node/: package-lock.json  package.json  tsconfig.json
epoch/: epoch.py
geographical-centre/: midpoint.jq  points.json
gmail-send/: README.md  gmail-send.py
greek-morphology/: extract.py  fetch.sh
grimm-scroller/: Server.hs  default.nix  fetch.sh  wclient.html
group-expense/: 2025.scm  group-expense  shell.nix
hesychius/: download.sh  hesychius.txt
indenter/: indenter.hs
kabbala.jl/: kabbala.jl  shell.nix  tree-of-life.txt
kauderwelsch-dl/: README.md  kauderwelsch-dl.sh
kevin/: keinverlag
lucha-libre-torneo/: LuchaLibreTorneo.hs  Readme.md
machine-learning-in-haskell/: MachineLearning.hs  README.md  shell.nix
misc/: Alliterations.hs  Clock.hs  ETIN.hs  Nolindrom.hs  PhoneNo.hs  Set.hs  Sierpinski.lhs  Stopwords.hs  init.sh  sort.hs  sort.py  trees.py  wennergren
node/: package-lock.json  package.json  shell.nix
node/src/: main.ts
node/src/types/hafas-client/: index.d.ts
onomastics/: geogen  pyproject.toml  setup.py  wsgi.py
onomastics-ng/: onomap.cabal  shell.nix
onomastics-ng/app/: Main.hs  Stoepel.hs  Svg.hs  Types.hs
onomastics-ng/cli/: Main.hs
onomastics-ng/lib/Onomap/: Stoepel.hs  Svg.hs  Types.hs
onomastics-ng/web/: Main.hs
onomastics/geogen/: cli.py  client.py  server.py
optimality-theory/: Learning.hs
orte/: list-orte.sh  orte-unique.txt  orte.txt
orte/examples/: probbach.html
osm-restaurants/: default.nix  osm-restaurants.js  osm-restaurants.ts  package.json
pie/: ChangeLog.md  LICENSE  default.nix
pie/src/: Phonology.hs
pissoir/: Pissoir.hs  README.md  shell.nix
poetry/: hermes.py
pun-sort/: default.nix  example.sh  sort.py  sort_api.py
quantitative-literaturwissenschaft/: Euphony.hs  Untitled.ipynb  shell.nix
quran-palindromes/: README.md  palindromes.py
rusty-jeep/: Cargo.toml  alarm  shell.nix
rusty-jeep/src/: main.rs
seh2g/: index.html  shell.nix
src/: Lib.hs  Phonology.hs  Util.hs
subsequence-repetition/: SubsequenceRepetition.hs
sun_hours/: shell.nix  sun_hours.py
table-height/: table_height.py
vedic-chant/: veda.ts  veda.txt
zodiac.pl/: zodiac.pg
