cabal-version:      2.4
name:               onomap
version:            0.1.0
author:             Kierán Meinhardt
maintainer:         kmein@posteo.de

executable onomap
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , containers
                    , http-client
                    , http-client-tls
                    , optparse-applicative
                    , servant
                    , servant-client
                    , svg-builder
                    , text
                    , vector
    other-modules:    Stoepel
                    , Types
                    , Svg
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2 -Wall -threaded
