cabal-version:      2.4
name:               onomap
version:            0.1.0
author:             Kierán Meinhardt
maintainer:         kmein@posteo.de

library
    hs-source-dirs:   lib
    exposed-modules:  Onomap.Stoepel
                    , Onomap.Types
                    , Onomap.Svg
    build-depends:    base >=4 && <5
                    , http-client
                    , servant
                    , servant-client
                    , aeson
                    , svg-builder
                    , vector
                    , containers
                    , text
    default-language: Haskell2010
    ghc-options:      -O2 -Wall -threaded

executable onomap-cli
    main-is:          Main.hs
    build-depends:    base >=4 && <5
                    , onomap
                    , optparse-applicative
                    , text
                    , http-client-tls
    hs-source-dirs:   cli
    default-language: Haskell2010
    ghc-options:      -O2 -Wall -threaded


executable onomap-web
    main-is:          Main.hs
    build-depends:    base >=4 && <5
                    , onomap
                    , containers
                    , aeson
                    , blaze-markup
                    , servant
                    , servant-blaze
                    , servant-server
                    , http-client
                    , http-client-tls
                    , text
                    , wai
                    , warp
    hs-source-dirs:   web
    default-language: Haskell2010
    ghc-options:      -O2 -Wall -threaded
