[tool.poetry]
name = "geogen"
version = "1.0"
description = "Geogen (geogen.stoepel.net) API wrapper"
authors = ["Kierán Meinhardt <kmein@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
requests-cache = "^0.8.1"
pandas = "^1.3.3"
docopt = "^0.6.2"
Flask = "^2.0.2"
gunicorn = "^20.1.0"


[tool.poetry.scripts]
geogen = 'geogen.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
